final update to cssdropdown

--- a/no-framework/cssdropdown.html
+++ b/no-framework/cssdropdown.html
@@ -112,7 +112,7 @@
 <body>
     <ul>
         <li class="dropdown">
-            <a class="dropbtn" href="#"><strong>File</strong></a>
+            <a class="dropbtn"><strong>File</strong></a>
             <div class="dropdown-content">
                 <a href="#">New</a>
                 <a href="#">Open</a>
@@ -124,7 +124,7 @@
 
 
         <li class="dropdown">
-            <a class = "dropbtn" href="#">Edit</a>
+            <a class = "dropbtn">Edit</a>
             <div class="dropdown-content">
                 <a href="#">Undo</a>
                 <a href="#">Redo</a>
@@ -138,7 +138,7 @@
             
 
         <li class="dropdown">
-            <a href="#" class="dropbtn"><strong>View</strong></a>
+            <a class="dropbtn"><strong>View</strong></a>
             <div class="dropdown-content">
               <a href="#">Zoom in</a>
               <a href="#">Zoom out</a>
